examples/test/testpolicy12665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12665
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key32: value15
      key34: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value25
          key21: value46
          key23: value49
      podSelector:
        matchLabels:
          key36: value44
          key37: value20
